# frankie-app

./: .gitignore  LICENSE  README.md  frankie-app.cabal  package-lock.json  package.json  stack.yaml  stats.json  tsconfig.json  webpack.config.js
app/: Main.hs
src/: Server.hs
web/: entry-dev.html  index.tsx
web/components/: app.tsx
web/reducers/: index.ts
