name:                frankie-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/frankie-app#readme
license:             BSD3
license-file:        LICENSE
author:              Tal Ben-Ari
maintainer:          tbenari@ucsd.edu
copyright:           2017 Tal Ben-Ari
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
  build-depends:       base >= 4.7 && < 5
                     , lio
                     , lio-http-server
  default-language:    Haskell2010

executable frankie-app-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , frankie-app
                     , lio-http-server
  default-language:    Haskell2010

test-suite frankie-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , frankie-app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/talbenari1/frankie-app
